--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -2,8 +2,14 @@
   height: 48px;
   width: 480px;
   margin-top: 2vh;
+  outline: none;
   border: 1px solid #9b9b9b;
   box-sizing: border-box;
   filter: drop-shadow(0px 1px 8px rgba(0, 0, 0, 0.05));
   border-radius: 4px;
+}
+
+.input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
