add MyBag and CO page

--- a/src/pages/DetailProduct/detail.module.css
+++ b/src/pages/DetailProduct/detail.module.css
@@ -25,7 +25,6 @@
     width: 3rem;
     height: 3rem;
     font-size: 1.5rem;
-    outline: #D4D4D4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,12 +33,13 @@
 .buttonMin{
     background-color: #D4D4D4;
     color: #FFFFFF;
+    border: solid 1px #D4D4D4;
 }
 
 .buttonPlus{
     background: #FFFFFF;
     color: #222222;
-
+    border: solid 1px #D4D4D4;
 }
 
 .sizeText{
@@ -49,7 +49,9 @@
 .lowerButtons{
     border-radius: 1.5rem;
     font-size: 1.5rem;
-    padding: 1rem
+    padding: 1rem;
+    border: solid 1px #D4D4D4;
+
 }
 
 .whiteButton{
