update navbar, carousell, home page

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -15,3 +15,8 @@
 .headerbody{
     box-shadow: 0px 6px 40px rgba(173, 173, 173, 0.25);
 }
+.iconuserimg{
+    position: absolute;
+    height: 3rem;
+    width: 3rem;
+}
