--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,17 +1,12 @@
-.src{
+.src {
     border-radius: 23px;
     border: 1px solid #8E8E93;
 }
-.buttonLogin{
-    border-radius: 25px;
-    border: none;
-    width: 5em;
-}
-.buttonSignup{
-    border-radius: 25px;
-    border: 1px solid #9B9B9B;
-    width: 5em;
-}
-.headerbody{
+
+.headerbody {
     box-shadow: 0px 6px 40px rgba(173, 173, 173, 0.25);
+}
+
+.right.d-flex.w-25.justify-content-end.pe-3 {
+    margin-right: 3rem;
 }
