--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -23,6 +23,16 @@
   filter: drop-shadow(0px 1px 8px rgba(0, 0, 0, 0.05));
 }
 
+.btn-tabs-2 {
+  width: 123px;
+  height: 48px;
+  color: #9B9B9B;
+  border: 1px solid #9b9b9b;
+  box-sizing: border-box;
+  filter: drop-shadow(0px 1px 8px rgba(0, 0, 0, 0.05));
+  background-color: #273ac7;
+}
+
 .btn-tabs:hover{
   background-color: #273ac7;
   color: #ffffff;
