--- a/src/pages/Profile/profile.module.css
+++ b/src/pages/Profile/profile.module.css
@@ -31,8 +31,10 @@
 .lowerButtons {
   border-radius: 1.5rem;
   font-size: 1rem;
-  padding: 0.25rem;
+  padding: .5rem 3rem;
   border: solid 1px #d4d4d4;
+  display: flex;
+  justify-content: center;
 }
 
 .redButton {
